--- a/package.json
+++ b/package.json
@@ -1,15 +1,16 @@
 {
   "name": "@jotazo/react-components-library",
-  "version": "0.0.2",
-  "description": "React components library",
-  "main": "dist/cjs/index.js",
+  "version": "0.0.12",
   "module": "dist/esm/index.js",
+  "main": "dist/cjs/index.js",
   "files": [
     "dist"
   ],
+  "description": "React components library",
   "types": "dist/index.d.ts",
   "scripts": {
-    "rollup": "rollup -c"
+    "rollup": "rollup -c",
+    "prepare": "rm -rf dist && npm run rollup"
   },
   "keywords": [],
   "author": "Javier Guerrero",
@@ -17,15 +18,25 @@
   "devDependencies": {
     "@rollup/plugin-commonjs": "^25.0.7",
     "@rollup/plugin-node-resolve": "^15.2.3",
+    "@rollup/plugin-terser": "^0.4.4",
     "@rollup/plugin-typescript": "^11.1.5",
     "@types/react": "^18.2.37",
+    "autoprefixer": "^10.4.16",
+    "postcss": "^8.4.31",
     "react": "^18.2.0",
     "rollup": "^4.4.1",
     "rollup-plugin-dts": "^6.1.0",
+    "rollup-plugin-peer-deps-external": "^2.2.4",
+    "rollup-plugin-postcss": "^4.0.2",
+    "tailwindcss": "^3.3.5",
     "tslib": "^2.6.2",
     "typescript": "^5.2.2"
   },
-  "publishConfig": {
-    "registry": "https://npm.pkg.github.com/Jotazo"
+  "peerDependencies": {
+    "react": "^18.2.0"
+  },
+  "dependencies": {
+    "framer-motion": "^10.16.5",
+    "react-switch": "7.0.0"
   }
 }
