--- a/package.json
+++ b/package.json
@@ -1,6 +1,10 @@
 {
   "name": "@jotazo/react-components-library",
-  "version": "0.0.12",
+  "version": "0.0.14",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/Jotazo/react-components-library"
+  },
   "module": "dist/esm/index.js",
   "main": "dist/cjs/index.js",
   "files": [
